finalized korea pictures

--- a/korea.html
+++ b/korea.html
@@ -82,10 +82,27 @@
                 <div class="caption">Come to Gwangali Beach at dusk for a beautiful view of the bridge. There are plenty of dinner and drink options along the beach too. Or, you can go to Burger King like we did...</div></div>
             <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXm4cuxHHSvP6Ro07IC9uTxZtcA-Ux3oXDUYog4rS1e2qnXFO4UsQ2FGT6T05Qg-ObQPZQm6ttXDeR0RWGDtj2QTFbvJPLYBj84ChyYzzS91wnZUxeLUpeK61C0HcQtpPSs7OuZF4x1G1KjqdSy8bBT1A=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
                 <div class="caption">Gamcheon Cultural Village is a MUST visit! Beautiful colored houses and little shops along the way. Definitely follow the walking path numbered out on the map for the full experience!</div></div>
-           
-            <!--TEMPLATE: <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWDck0thgv_Mal9u2ou79Wgc8cXjjppArrm3ErECRRqT_sxI-aWERKID1hIN6rz3kyZ7Nrll_i2jfXYataj0jYT7omZ827cgkbaEZ_pPNDaO3P2D1flY58NM2aje9bUqZVxighZPPk7DgwLm5tbs7vzqw=w1324-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXEbl28pI5A4EQoQITGLTiYmKBlGJPiKPueiP6p4vka2nk6YIY8Exj4rch11j5cX7crAvLAV-u9RG_iEX7_Csdqx9YXjKPASZqLca_ZzPikEc6CKj2paPvDu1DmcYJXKQ7CCPHViHGE70l1KijAFdzX0Q=w745-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaW7_GgShmMx7l-BAUzMAslB7kZoNmcFzVM6eoX2DZDOGIvUeA324cytFR4IQ96--YtLggM2gU2zCRZGX5p8etgWonQ6fUZf3LSK39sW85Ho-PK-RBMJyId27mZKDq1xiwLy4DhbqXN-TwQ09iygCrO75Q=w745-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+                <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaU4aOeI6sv9tCVVZ6qo0Dv5lSl2-c7UJXglIt3q3lf7f_SN4QzjZDP4fvqIhJwF9JYDg5oZjOXuDamAPpVmzU1ZxA3gvMxJQXcqf2EFpW2NPGV6gT5vK3kOQR_iGEGQd2HOjc1atN3LNtVlHrmw4Cptdg=w1324-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaUqsirUx0mo998Eqx9py9dSv8E2knPgrXrkA-3DJ1fhd3vJyFAJAn9a6Mc_6Ku7UNj7S2ezRNdo34jfvUTp2lmoYXVc2KFrQmSIdYmKVECzxRaGulUH67HcyCZuML2E3Z5cOamuhpXvLblnX-ebZPWF9g=w1324-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaUZowfNE3alB9qc8nnfDggDwmGq3afB5L3FE7qiVepzH6e7a0ouwbZirxymEn5MpEsu7n1QTKgVh0dAyYnUEolmz8xUIUOnXs_J4j2QpKSXSuSO9lyA0ZIdgvXCqLcTY9lm5IdruaOHRWP5w-gLMMs3lA=w745-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaVcK5GWD5fERJ7SPyMDvUnQaqRTymg6m0E5HA6PqNnVfizwxgn6S1g43Q5zDmG7tUaJ9Rsnc-TDzk2Z6NX0iuqynedYhnasFNv7TZhSGqfOL84nZBZAu-Twxoh4tfb_ZGCQIVKXuodlFF1xGplDJ5gmVA=w1324-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXaD7P8ZrMghuEH1BjSH7aWSHDX6SBN8LL0BflkStvBglzbotCKqvUgPpejQiqqpPj6Rm2jFJ60JxCSbhwIWg5-2VRrr7LvMHPIGTwfzdkaLsY2hfO2b46IFvFtJIAewhDLY3pICi0CfGMGb6W0vvkePQ=w1324-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWi0w68rKLXKi5fBJ1lff9N3bWcbN9XIdhFTx9uSTGv9pxfZmBnzHTE1jJuHWxiyxzI9xGfv8V3TuXUiiMRaE0BGKROXsKYZD8WF2_m6-4KAQ7m_4N1U9nAjNzo8C26xQGD1OJSIGPP_3Itq0RiNvwFwA=w1324-h993-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>
+            
+            <!--<div class="tile"><img src="temple.jpg" width="300" height="200"><br>
                 <div class="caption">INSERT CAPTION HERE</div></div>-->
-
         </div>
         <footer>
             <ul>
