--- a/destinations.html
+++ b/destinations.html
@@ -35,15 +35,15 @@
         <h1>Destinations</h1>
         <div class="destinations">
             <div class="tile"><a href="korea.html">Korea<br><img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
-            <div class="tile">Cambodia<br><img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">Japan<br><img src="japan_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">Taiwan<br><img src="taiwan_thumbnail.JPG" class="thumbnail"></div>
-            <div class="tile">Spain<br><img src="spain_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">UK<br><img src="uk_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">Portugal<br><img src="portugal_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">Thailand<br><img src="thailand_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">Iceland<br><img src="iceland_thumbnail.jpg" class="thumbnail"></div>
-            <div class="tile">Phillipines<br><img src="philippines_thumbnail.JPG" class="thumbnail"></div>
+            <div class="tile"><a href="">Cambodia<br><img src="cambodia_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="japan.html">Japan<br><img src="japan_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="">Taiwan<br><img src="taiwan_thumbnail.JPG" class="thumbnail"></a></div>
+            <div class="tile"><a href="">Spain<br><img src="spain_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="">UK<br><img src="uk_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="">Portugal<br><img src="portugal_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="thailand.html">Thailand<br><img src="thailand_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="">Iceland<br><img src="iceland_thumbnail.jpg" class="thumbnail"></a></div>
+            <div class="tile"><a href="">Phillipines<br><img src="philippines_thumbnail.JPG" class="thumbnail"></a></div>
         </div>
         <footer>
             <ul>
