--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             </div>
         </div>
             <div class="bar">
-                <div class="tile"><a href="korea.html">Korea<img src="https://lh3.googleusercontent.com/pw/AJFCJaUqD3zAErIwbdMSPdn2mWZM86gzPB5-_hISu57qHNDac_Tc9bItQQuxXRhbASb2UpCKyOEMhRetbMeL1VhJYNiVxp2p3hlRMTlEdtJMZztAqC8PFUns4Jdpi3EtUoqla58aOmcyElEaknxcopN4DjxXaQ=w1014-h760-s-no?authuser=0" class="thumbnail"></a></div>
-                <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">Japan<img src="japan_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">Taiwan<img src="taiwan_thumbnail.JPG" class="thumbnail"></div>
-                <div class="tile">Spain<img src="spain_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">UK<img src="uk_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">Portugal<img src="portugal_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">Thailand<img src="thailand_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">Iceland<img src="iceland_thumbnail.jpg" class="thumbnail"></div>
-                <div class="tile">Phillipines<img src="philippines_thumbnail.JPG" class="thumbnail"></div>
+                <div class="tile"><a href="korea.html">Korea<br><img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="">Cambodia<br><img src="cambodia_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="japan.html">Japan<br><img src="japan_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="">Taiwan<br><img src="taiwan_thumbnail.JPG" class="thumbnail"></a></div>
+                <div class="tile"><a href="">Spain<br><img src="spain_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="">UK<br><img src="uk_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="">Portugal<br><img src="portugal_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="thailand.html">Thailand<br><img src="thailand_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="">Iceland<br><img src="iceland_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="">Phillipines<br><img src="philippines_thumbnail.JPG" class="thumbnail"></a></div>
             </div>
         </div>
         <footer>
